--- a/src/css/project/_filter.sass
+++ b/src/css/project/_filter.sass
@@ -1,3 +1,9 @@
+.search-bar + .filter
+  margin-top: -24px
+
+  @media(min-width: 1350px)
+    margin-top: -64px
+
 .filter
   display: flex
   flex-wrap: wrap
