--- a/src/css/base/_buttons.sass
+++ b/src/css/base/_buttons.sass
@@ -1,8 +1,8 @@
 .button
   align-items: center
-  background-color: $text-color
   border: none
-  color: #fff
+  background-color: transparent
+  color: $text-color
   cursor: pointer
   display: inline-flex
   font-family: 'Mediator', Arial, sans-serif
@@ -15,7 +15,7 @@
   &:hover,
   &:focus,
   &:active
-    color: #fff
+    color: $text-color
 
   &:disabled,
   &.disabled
@@ -26,6 +26,7 @@
       outline: none
 
   .icon
+    fill: $text-color
     transition: fill 0.3s
 
     &:first-child
@@ -86,6 +87,7 @@
     &:focus
       //background-color: rgba($text-color, 0.7)
       background-color: $green
+      color: #fff
 
     &:disabled,
     &.disabled
@@ -102,6 +104,7 @@
     &:hover,
     &:focus
       background-color: rgba($green, 0.7)
+      color: #fff
 
     &:disabled,
     &.disabled
@@ -118,6 +121,7 @@
     &:hover,
     &:focus
       background-color: rgba($purple, 0.7)
+      color: #fff
 
     &:disabled,
     &.disabled
@@ -134,6 +138,7 @@
     &:hover,
     &:focus
       background-color: darken($purple_light, 7%)
+      color: #fff
 
       .icon
         fill: #fff
