--- a/src/css/base/_buttons.sass
+++ b/src/css/base/_buttons.sass
@@ -120,7 +120,7 @@
 
     &:hover,
     &:focus
-      background-color: rgba($purple, 0.7)
+      background-color: lighten($purple, 10%)
       color: #fff
 
     &:disabled,
