--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -14,7 +14,6 @@ body
   height: 100%
   min-height: 100%
   min-width: 320px
-  overflow-wrap: break-word
   overflow-x: hidden
 
   &.overflow
@@ -22,7 +21,7 @@ body
 
 .page-content
   flex: 1 0 auto
-  overflow: hidden
+  //overflow: hidden
   padding-top: 90px
   padding-bottom: 40px
   position: relative
