--- a/src/css/project/_decor.sass
+++ b/src/css/project/_decor.sass
@@ -1,7 +1,24 @@
+.decor-container
+  display: none
+
+  @media(min-width: 1350px)
+    display: block
+    bottom: 0
+    left: 0
+    overflow: hidden
+    position: absolute
+    right: 0
+    top: 0
+    z-index: 1
+
 .decor
+  display: none
   position: absolute
   max-width: 30vw
   z-index: 1
+
+  @media(min-width: 1350px)
+    display: block
 
   @media(min-width: 1900px)
     max-width: 40vw
