--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -86,3 +86,9 @@
 @import "project/_analysis-detail.sass"
 
 @import "project/_prices-list.sass"
+
+@import "project/_lists-block.sass"
+
+@import "project/_clinics-slider.sass"
+
+@import "project/_equip-slider.sass"
