--- a/src/css/project/_clinics-slider.sass
+++ b/src/css/project/_clinics-slider.sass
@@ -1,7 +1,4 @@
-.doctors-list
-  list-style: none
-  margin: 0
-  padding: 0
+.clinics-slider
 
   @media(min-width: 768px)
     display: flex
@@ -10,12 +7,8 @@
     margin-right: -6px
 
   @media(min-width: 1024px)
-    margin-left: -10px
-    margin-right: -10px
-
-  @media(min-width: 1350px)
-    margin-left: -20px
-    margin-right: -20px
+    margin-left: -12px
+    margin-right: -12px
 
   &:not(:last-child)
     margin-bottom: 56px
@@ -24,8 +17,8 @@
       margin-bottom: 96px
 
   &.slick-initialized
-    .doctors-list__item
-      margin-bottom: 0
+    .clinics-slider__item
+      margin-bottom: 12px
 
   .slick-list
     width: 100%
@@ -46,51 +39,53 @@
       width: 50%
 
     @media(min-width: 1024px)
-      padding-left: 10px
-      padding-right: 10px
-      width: 25%
+      padding-left: 12px
+      padding-right: 12px
+      width: 33.33333%
 
-    @media(min-width: 1350px)
-      padding-left: 20px
-      padding-right: 20px
-
-.doctor
+.clinic
+  border: 1px solid $green_light
+  border-radius: $border-radius*2
+  background-color: #fff
+  box-shadow: none
   display: flex
   flex-direction: column
   height: 100%
   margin-left: auto
   margin-right: auto
-  max-width: 392px
+  max-width: 564px
+  padding: 10px
   position: relative
+  transition: background-color 0.3s, box-shadow 0.3s
   width: 100%
 
   &:hover,
   &:focus
-    .doctor__image
-      background-color: $purple_light
-      box-shadow: 0 4px 6px 0 rgba(#000, 0.2)
-
-  &__image
-    background-color: #fff
-    border: 1px solid $purple_light
-    border-radius: $border-radius
-    margin-bottom: 20px
-    padding: 16px
-    transition: background-color 0.3s, box-shadow 0.3s
+    background-color: $green_light
+    box-shadow: 0 4px 6px 0 rgba(#000, 0.2)
 
     img
-      border-radius: $border-radius
+      transform: scale(1.02)
+
+  &__image
+    border-radius: $border-radius*2
+    margin-bottom: 24px
+    overflow: hidden
+
+    img
+      transition: transform 0.3s
+      transform: scale(1)
 
   &__info
     display: flex
     flex-direction: column
     flex-grow: 1
+    padding: 10px
 
-  &__name
+  &__title
     font-size: 18px
-    font-weight: 800
     line-height: 1.2
-    margin-bottom: 0
+    margin-bottom: 8px
 
     @media(min-width: 1350px)
       font-size: 20px
@@ -102,6 +97,10 @@
       color: $text-color
       text-decoration: none
 
+      &:hover,
+      &:focus
+        color: $text-color
+
       &::after
         bottom: 0
         content: ''
@@ -111,10 +110,15 @@
         top: 0
         z-index: 1
 
-  &__place
-    margin-bottom: 16px
+  &__preview
+    font-weight: 700
+    margin-bottom: 0
 
-  &__exp
-    font-size: 18px
-    font-weight: 800
+  &__button-block
     margin-top: auto
+    text-align: right
+
+    .button
+      min-width: 130px
+      position: relative
+      z-index: 2
