--- a/src/css/project/_complex.sass
+++ b/src/css/project/_complex.sass
@@ -15,7 +15,11 @@
     @media(min-width: 1350px)
       margin-bottom: 84px
 
+  .slick-track
+    display: flex
+
   &__item
+    height: auto
     margin-bottom: 12px
 
     @media(min-width: 768px)
@@ -34,6 +38,7 @@
   box-shadow: none
   display: flex
   flex-direction: column
+  height: 100%
   margin-left: auto
   margin-right: auto
   max-width: 424px
