--- a/src/css/project/_equip-slider.sass
+++ b/src/css/project/_equip-slider.sass
@@ -1,4 +1,4 @@
-.doctors-list
+.equip-slider
   list-style: none
   margin: 0
   padding: 0
@@ -54,67 +54,46 @@
       padding-left: 20px
       padding-right: 20px
 
-.doctor
+.equip
+  color: $text-color
   display: flex
   flex-direction: column
   height: 100%
   margin-left: auto
   margin-right: auto
   max-width: 392px
-  position: relative
+  text-decoration: none
   width: 100%
 
   &:hover,
   &:focus
-    .doctor__image
+    color: $text-color
+    
+    .equip__image
       background-color: $purple_light
       box-shadow: 0 4px 6px 0 rgba(#000, 0.2)
+
 
   &__image
     background-color: #fff
     border: 1px solid $purple_light
     border-radius: $border-radius
-    margin-bottom: 20px
+    display: block
+    margin-bottom: 16px
     padding: 16px
     transition: background-color 0.3s, box-shadow 0.3s
 
     img
       border-radius: $border-radius
 
-  &__info
-    display: flex
-    flex-direction: column
-    flex-grow: 1
-
-  &__name
+  &__title
+    display: block
     font-size: 18px
     font-weight: 800
     line-height: 1.2
-    margin-bottom: 0
 
     @media(min-width: 1350px)
       font-size: 20px
 
     @media(min-width: 1900px)
       font-size: 24px
-
-    a
-      color: $text-color
-      text-decoration: none
-
-      &::after
-        bottom: 0
-        content: ''
-        left: 0
-        position: absolute
-        right: 0
-        top: 0
-        z-index: 1
-
-  &__place
-    margin-bottom: 16px
-
-  &__exp
-    font-size: 18px
-    font-weight: 800
-    margin-top: auto
