--- a/src/css/project/_map-block.sass
+++ b/src/css/project/_map-block.sass
@@ -43,7 +43,7 @@
       flex-direction: row-reverse
 
   &__list
-    //background-color: $purple_light
+    background-color: #fff
     border-radius: 0 0 $border-radius $border-radius
     max-height: 600px
     overflow-y: auto
@@ -74,14 +74,18 @@
       width: 29%
 
     @media(min-width: 1350px)
-      max-height: 600px
       padding: 12px
 
+    @media(min-width: 1900px)
+      max-height: 600px
+
   &__map
+    background-color: #fff
     flex-grow: 1
     padding: 8px
 
     @media(min-width: 768px)
+      border-radius: 0 $border-radius $border-radius 0
       width: 60%
 
     @media(min-width: 1024px)
@@ -100,7 +104,7 @@
     @media(min-width: 768px)
       height: 384px
 
-    @media(min-width: 1350px)
+    @media(min-width: 1900px)
       height: 576px
 
     &::after
