--- a/src/css/project/_tiles.sass
+++ b/src/css/project/_tiles.sass
@@ -7,10 +7,10 @@
   padding: 0
 
   &:not(:last-child)
-    margin-bottom: 56px
+    margin-bottom: 44px
 
     @media(min-width: 1350px)
-      margin-bottom: 96px
+      margin-bottom: 84px
 
   &__item
     display: flex
@@ -29,6 +29,13 @@
 
       @media(min-width: 1024px)
         width: 25%
+
+    &--type_2
+      @media(min-width: 768px)
+        width: 50%
+
+      @media(min-width: 1024px)
+        width: 33.33333%
 
 .tile-link
   background-color: #fff
@@ -82,10 +89,31 @@
     @media(min-width: 1500px)
       padding: 32px 24px
 
+  &--type_4
+    position: relative
+
+    .tile-link__image
+      text-align: center
+
+    .tile-link__title
+      font-weight: 800
+      margin-bottom: 8px
+
+      a
+        &::after
+          bottom: 0
+          content: ''
+          left: 0
+          position: absolute
+          right: 0
+          top: 0
+          z-index: 1
+
   &__image
     text-align: right
 
   &__title
+    display: block
     font-size: 18px
     font-weight: 700
     line-height: 1.2
@@ -97,7 +125,13 @@
     @media(min-width: 1900px)
       font-size: 24px
 
+    a
+      color: $text-color
+      text-decoration: none
+
   &__text
+    display: block
+
     &:not(:last-child)
       margin-bottom: 16px
 
@@ -107,3 +141,25 @@
 
     .button
       min-width: 126px
+
+  &__container
+    align-items: flex-end
+    bottom: 0
+    display: flex
+    height: 100%
+    left: 0
+    position: absolute
+    padding: 24px 16px
+    width: 100%
+    z-index: 1
+
+    @media(min-width: 1500px)
+      padding: 32px 24px
+
+    .button
+      margin-left: auto
+      position: relative
+      z-index: 2
+
+      @media(min-width: 1350px)
+        min-width: 130px
