--- a/src/template/sprite.html
+++ b/src/template/sprite.html
@@ -57,4 +57,113 @@
         <path
           d="M25.8918 9.10645L23.5352 11.4664C24.4802 12.4081 25.0002 13.6631 25.0002 14.9998C25.0002 16.3364 24.4802 17.5914 23.5352 18.5331L25.8918 20.8931C27.4652 19.3198 28.3335 17.2281 28.3335 14.9998C28.3335 12.7714 27.4652 10.6798 25.8918 9.10645Z" />
     </symbol>
+    <symbol id="issue_1" viewBox="0 0 40 40">
+        <g>
+            <path d="M19.2,26.5h1.6v1.6h-1.6V26.5z" />
+            <path d="M16.8,10.4l-5.5,1.1c-1.5,0.3-2.6,1.6-2.6,3.2V33h1.6V14.7c0-0.8,0.5-1.4,1.3-1.6l6.8-1.4V7h-1.6V10.4z" />
+            <path d="M28.8,11.5l-5.5-1.1V7h-1.6v4.7l6.8,1.4c0.8,0.2,1.3,0.8,1.3,1.6V33h1.6V14.7C31.4,13.1,30.3,11.8,28.8,11.5z" />
+            <path d="M13.5,17.6h-1.6v0.8l1.6,8.1L11.9,32l0,1h1.6v-0.7l1.6-5.8l-1.6-8.2V17.6z" />
+            <path d="M28.1,17.6h-1.6v0.7l-1.6,8.2l1.6,5.8V33h1.6v-0.8l-1.6-5.7l1.6-7.9L28.1,17.6z" />
+            <path d="M19.2,13.5h1.6v8.1h-1.6V13.5z" />
+            <path d="M19.2,23.2h1.6v1.6h-1.6V23.2z" />
+        </g>
+    </symbol>
+    <symbol id="issue_2" viewBox="0 0 40 40">
+        <path
+          d="M33,15.7c-0.1-4.2-3.7-7.6-7.9-7.4c-1.9,0.1-3.7,0.8-5.1,2.1c-3.1-2.9-7.9-2.9-10.9,0.2C7.8,12,7.1,13.8,7,15.7c0,2.3,1,4.5,2.7,6l9.8,9.8c0.3,0.3,0.8,0.3,1.1,0l9.8-9.8C32,20.2,33,18,33,15.7z M20,29.9l-8.4-8.3h2.7c0.3,0,0.5-0.1,0.7-0.4l0.6-1l2.2,3.4c0.2,0.4,0.7,0.5,1.1,0.2c0.1-0.1,0.2-0.2,0.3-0.3l3-6.4l2.1,4c0.1,0.2,0.4,0.4,0.7,0.4h3.5L20,29.9z M29.8,20h-4.5l-2.6-4.9c-0.2-0.4-0.7-0.5-1-0.3c-0.1,0.1-0.3,0.2-0.3,0.3l-3.1,6.5l-2.1-3.3c-0.2-0.4-0.7-0.5-1.1-0.2c-0.1,0.1-0.2,0.2-0.2,0.3l-1,1.7h-3.7c-1-1.2-1.6-2.7-1.6-4.3C8.6,11,14.7,7.2,19.5,12c0.3,0.3,0.8,0.3,1.1,0c0,0,0,0,0,0C26.6,5.9,35,13.8,29.8,20L29.8,20z" />
+    </symbol>
+    <symbol id="issue_3" viewBox="0 0 40 40">
+        <path
+          d="M23.8,14.3c5.7,2.3,6,5.2,6.6,9.5c0.1,0.4,0.1,0.8,0.2,1.3c0.1,0.3-0.2,0.7-0.5,0.7c-0.3,0.1-0.7-0.2-0.7-0.5c0,0,0,0,0,0c-0.1-0.5-0.1-0.9-0.2-1.3c-0.5-4.2-0.8-6.5-5.8-8.5c-0.3-0.1-0.5-0.5-0.3-0.8C23.1,14.3,23.5,14.1,23.8,14.3L23.8,14.3z M22.9,22.5c0.3,0.2,0.7,0.1,0.9-0.2c0.2-0.3,0.1-0.7-0.2-0.9c0,0,0,0,0,0l-2.6-1.6c-0.3-0.2-0.7-0.1-0.9,0.2c-0.1,0.1-0.1,0.2-0.1,0.3v5.3c-0.2,1.4,0.6,2.7,1.8,3.3c0.3,0.1,0.7,0,0.8-0.3c0.1-0.3,0-0.7-0.3-0.8c-0.7-0.5-1.1-1.3-1-2.2v-4.1L22.9,22.5z M20.2,11c0.3,0.2,0.7,0.2,0.9-0.1c0.7-0.8,1.2-0.9,1.3-1c0.3-0.1,0.6-0.4,0.5-0.7c-0.1-0.3-0.3-0.6-0.7-0.5c-0.8,0.2-1.5,0.7-2.1,1.4C19.9,10.4,19.9,10.8,20.2,11C20.2,11,20.2,11,20.2,11L20.2,11z M17.3,19.8c-0.2-0.1-0.4-0.1-0.6,0l-2.6,1.6c-0.3,0.2-0.4,0.6-0.2,0.9c0.2,0.3,0.6,0.4,0.8,0.2l1.6-1v4.1c0.1,0.9-0.3,1.7-1,2.2c-2.3,1-3.8,1.7-5.2,3.4c-0.3,0.5-0.9,0.7-1.5,0.5c-0.6-0.3-0.9-1.1-0.8-2.3c0.1-0.9,0.2-1.9,0.4-2.8c0.1-0.6,0.2-1.2,0.2-1.8c0-0.3,0.1-0.6,0.1-0.9c0.5-4.2,0.8-6.5,5.8-8.5c0.3-0.1,0.5-0.5,0.3-0.8c-0.1-0.3-0.5-0.4-0.8-0.3c-5.7,2.3-6.1,5.2-6.6,9.5l-0.1,0.9c-0.1,0.6-0.2,1.2-0.2,1.7c-0.1,0.9-0.3,1.9-0.4,2.8C6.4,31,7,32.4,8.1,32.8C8.4,33,8.7,33,9,33c0.8,0,1.6-0.4,2.1-1.1c1.2-1.4,2.6-2.1,4.8-3c1.2-0.6,1.9-2,1.8-3.3v-5.3C17.6,20.1,17.5,19.9,17.3,19.8L17.3,19.8z M22.6,11.6c-1.5,0.6-2.5,2-2.5,3.6v1.7c0,0.2,0.1,0.4,0.3,0.5l2.6,1.7c0.3,0.2,0.7,0.1,0.9-0.2c0.2-0.3,0.1-0.7-0.2-0.9c0,0,0,0,0,0l-2.3-1.5v-1.4c0-1.1,0.7-2,1.7-2.5c0.3-0.1,0.5-0.5,0.4-0.8C23.2,11.7,22.9,11.5,22.6,11.6L22.6,11.6z M31.6,27.4c-0.2,0.1-0.4,0.3-0.7,0.4c0,0.2,0,0.4,0.1,0.5c0,0.3,0.1,0.6,0.1,1c0.2,1.7-0.4,3.1-1.5,3.6C29.3,33,29,33,28.7,33c-0.8,0-1.6-0.4-2.1-1.1c-0.5-0.6-1.2-1.2-1.9-1.6c-0.8,0.2-1.6,0.4-2.5,0.6c-1.1,0.2-2.6,0.3-2.9-0.7c-0.1-0.3-0.1-0.7,0.2-1c0.2-0.3,0.6-0.4,0.9-0.2c0.2,0.2,0.3,0.4,0.3,0.7c0.7,0.1,2.8-0.2,6-1.3c2-0.6,3.8-1.6,5.4-2.9c-0.3-0.1-0.5-0.5-0.4-0.8c0.1-0.3,0.4-0.5,0.7-0.4c0.5,0,0.9,0.3,1.1,0.7C33.7,25.9,32.5,26.8,31.6,27.4L31.6,27.4z M29.9,29.4c0-0.3-0.1-0.6-0.1-0.9l0-0.1c-0.8,0.4-1.7,0.8-2.7,1.1c-0.3,0.1-0.5,0.2-0.8,0.3c0.5,0.4,0.9,0.8,1.3,1.3c0.3,0.5,0.9,0.7,1.5,0.5C29.7,31.4,30,30.6,29.9,29.4L29.9,29.4z M19.5,7.6c0-0.3-0.3-0.6-0.6-0.7c-0.3,0-0.6,0.3-0.7,0.6c0,0,0,0,0,0.1v1.5c0,0.3,0.3,0.6,0.7,0.6c0.3,0,0.6-0.3,0.6-0.6V7.6z M15.6,8.7c-0.3-0.1-0.7,0.2-0.7,0.5C14.8,9.6,15,9.9,15.4,10c0,0,0,0,0,0c0.1,0,0.5,0.1,1.3,1c0.2,0.3,0.6,0.3,0.9,0c0.3-0.2,0.3-0.6,0.1-0.9C17.1,9.4,16.4,8.9,15.6,8.7z M15.2,11.6c-0.3-0.1-0.7,0-0.8,0.4s0,0.7,0.4,0.8c0,0,0,0,0,0c1,0.4,1.6,1.4,1.7,2.5v1.4l-2.3,1.5c-0.3,0.2-0.4,0.6-0.2,0.9c0.2,0.3,0.6,0.4,0.9,0.2c0,0,0,0,0.1,0l2.6-1.7c0.2-0.1,0.3-0.3,0.3-0.5v-1.7C17.6,13.6,16.6,12.2,15.2,11.6L15.2,11.6z" />
+    </symbol>
+    <symbol id="issue_4" viewBox="0 0 40 40">
+        <g>
+            <path
+              d="M13.9,30c0-0.8,0.2-1.6,0.7-2.3c1.6,2.3,4.2,3.7,7,3.8c5.3,0,9.1-5.1,9.1-10.7c0-5.7-3.9-10.7-9.1-10.7c-0.7,0-1.4,0.1-2,0.3c0-0.7,0.2-1.4,0.5-2L20.7,7h-5.1l-0.2,0.5c-0.9,2.6-0.5,5.5,1,7.8c0.7,1,0.9,2.2,0.6,3.4c-0.6,2.4-2.6,3-3.2,3.4c-2.8,1.6-4.5,4.6-4.5,7.8v3h4.6V30z M16.7,8.5h1.6c-0.3,1-0.4,2-0.2,3l0.2,0.9l0.9-0.3c0.8-0.3,1.6-0.5,2.4-0.5c3,0,5.6,2.1,6.8,5.1c-1.5,0.1-2.9-0.1-4.3-0.5c-1.8-0.6-3.8-0.8-5.7-0.5c-0.2-0.4-0.4-0.8-0.6-1.2C16.5,12.7,16.2,10.6,16.7,8.5L16.7,8.5z M12.4,31.5h-1.5V30c0-2.7,1.4-5.1,3.7-6.4c0.5-0.4,3.2-1.2,3.9-4.4c0.1-0.6,0.2-1.3,0.1-1.9c1.6-0.2,3.3-0.1,4.9,0.5c1.3,0.4,2.6,0.6,3.9,0.6c0.5,0,0.9,0,1.4-0.1c0.2,0.8,0.3,1.7,0.3,2.5c0,5-3.4,9.1-7.6,9.1c-2.6-0.1-5-1.6-6.3-3.9l-0.5-0.9l-0.7,0.7c-1.1,1.1-1.7,2.6-1.7,4.1L12.4,31.5z" />
+            <path d="M25.3,23.8v-1.5c-0.4,0-0.8-0.3-0.8-0.8c0-0.4,0.3-0.8,0.8-0.8c0.4,0,0.8,0.3,0.8,0.8v0h1.5c0-1.3-1-2.3-2.3-2.3c-1.3,0-2.3,1-2.3,2.3C23,22.8,24.1,23.8,25.3,23.8L25.3,23.8z" />
+            <path d="M19.2,26.9c1.3,0,2.3-1,2.3-2.3s-1-2.3-2.3-2.3l0,0v1.5c0.4,0,0.8,0.3,0.8,0.8s-0.3,0.8-0.8,0.8c-0.4,0-0.8-0.3-0.8-0.8l0,0H17C17,25.8,18,26.9,19.2,26.9z" />
+            <path d="M23,25.3h1.5v1.5H23V25.3z" />
+            <path d="M20,19.2h1.5v1.5H20V19.2z" />
+        </g>
+    </symbol>
+    <symbol id="issue_5" viewBox="0 0 40 40">
+        <path
+          d="M30,19.2c-1.4,0-2.6,0.9-3,2.3h-1.7c-0.4-3.3-3.5-5.7-6.8-5.3c-0.8,0.1-1.5,0.3-2.2,0.7l-2.6-3.6c1.4-1.6,1.3-4-0.3-5.4S9.4,6.7,8,8.2s-1.3,4,0.3,5.4c1.1,1,2.8,1.3,4.2,0.6l2.6,3.6c-2.1,2-2.5,5.2-1,7.7l-2.3,1.9c-1.4-0.9-3.3-0.6-4.2,0.8c-0.9,1.4-0.6,3.3,0.8,4.2c1.4,0.9,3.3,0.6,4.2-0.8c0.6-0.9,0.7-2.1,0.2-3.1l2.3-1.9c2.4,2.3,6.3,2.2,8.6-0.2c0.9-0.9,1.5-2.1,1.6-3.4H27c0.4,1.6,2.1,2.6,3.7,2.2c1.6-0.4,2.6-2.1,2.2-3.7C32.6,20.2,31.3,19.2,30,19.2L30,19.2z M8.5,10.8c0-1.3,1-2.3,2.3-2.3s2.3,1,2.3,2.3s-1,2.3-2.3,2.3l0,0C9.6,13.1,8.5,12.1,8.5,10.8z M10.1,31.5c-0.8,0-1.5-0.7-1.5-1.5c0-0.8,0.7-1.5,1.5-1.5c0.8,0,1.5,0.7,1.5,1.5C11.6,30.8,10.9,31.5,10.1,31.5z M19.2,26.9c-2.5,0-4.6-2-4.6-4.6c0-2.5,2-4.6,4.6-4.6s4.6,2,4.6,4.6C23.8,24.8,21.8,26.9,19.2,26.9L19.2,26.9z M30,23.8c-0.8,0-1.5-0.7-1.5-1.5s0.7-1.5,1.5-1.5s1.5,0.7,1.5,1.5C31.5,23.1,30.8,23.8,30,23.8z" />
+    </symbol>
+    <symbol id="issue_6" viewBox="0 0 40 40">
+        <g>
+            <path
+              d="M20.3,24.3L20.3,24.3c-0.3,0-0.4-0.2-0.5-0.4c-0.2-0.7-0.7-1.5-2.6-1.3c-0.3,0-0.5-0.2-0.6-0.4c0-0.1,0-0.2,0.1-0.4c0.4-0.6,0.7-1.5-0.7-2.6c-0.2-0.2-0.3-0.5-0.1-0.7c0.1-0.1,0.2-0.2,0.3-0.2c0.4-0.1,0.9-0.3,1-1.4c0-0.3,0.3-0.5,0.5-0.5c0.1,0,0.1,0,0.2,0c1,0.4,2.2,0,2.9-0.8c0.2-0.2,0.5-0.2,0.7,0c0.1,0.1,0.1,0.2,0.1,0.3c0,0.5,0.2,0.9,0.6,1.2c0.5,0.2,1.1,0.2,1.6,0c0.3-0.1,0.5,0,0.6,0.3c0.1,0.2,0,0.5-0.2,0.6c-1,0.8-1.2,2-0.6,3.8c0.1,0.3,0,0.5-0.3,0.6c-0.1,0-0.2,0-0.3,0c-0.6-0.2-1.6-0.2-2.5,1.5C20.6,24.2,20.5,24.3,20.3,24.3z M18,21.7c0.9,0,1.8,0.4,2.4,1.1c0.5-0.8,1.4-1.2,2.3-1.3c-0.3-1-0.2-2.1,0.2-3.1c-0.4,0-0.8-0.1-1.1-0.3c-0.4-0.3-0.7-0.6-0.8-1.1c-0.8,0.6-1.8,0.8-2.7,0.7c-0.1,0.6-0.4,1.1-0.9,1.4C18,19.8,18.2,20.7,18,21.7z" />
+            <path
+              d="M21.2,16.7C21.2,16.7,21.1,16.7,21.2,16.7c-0.4-0.1-0.5-0.3-0.5-0.6c0.6-3.2,1-4.9,2.5-5.6c1-0.4,2-1.4,1.7-2.3c-0.1-0.3,0-0.6,0.3-0.6c0.3-0.1,0.6,0,0.6,0.3c0.5,1.5-0.7,2.9-2.2,3.6c-1.1,0.5-1.4,1.8-1.9,4.9C21.7,16.5,21.5,16.7,21.2,16.7z" />
+            <path
+              d="M22.3,12.4c-0.2,0-0.4-0.1-0.5-0.3c-0.3-1-1-1.8-2-2.2c-1.2-0.6-1.8-2-1.5-3.3c0-0.3,0.3-0.5,0.6-0.4c0.3,0,0.5,0.3,0.4,0.6c-0.2,0.9,0.2,1.8,1,2.2c1.2,0.5,2.1,1.5,2.5,2.7c0.1,0.3,0,0.6-0.3,0.6C22.5,12.4,22.4,12.4,22.3,12.4L22.3,12.4z" />
+            <path
+              d="M20.8,10.4c-0.2,0-0.4-0.1-0.5-0.3l0-0.1c-0.2-0.6-0.3-1-0.1-1.4s0.7-0.5,1.6-0.7c0.6-0.1,1-0.4,1.1-0.7s-0.2-0.8-0.7-1.2C22,5.7,22,5.4,22.1,5.2c0.2-0.2,0.5-0.2,0.7-0.1c0.8,0.5,1.2,1.3,1,2.2c-0.3,0.8-1,1.4-1.9,1.5c-0.3,0-0.6,0.1-0.9,0.2c0,0.2,0.1,0.4,0.2,0.5l0,0.1c0.1,0.3-0.1,0.6-0.3,0.6C20.9,10.3,20.8,10.4,20.8,10.4L20.8,10.4z" />
+            <path
+              d="M17.8,17.6c-0.2,0-0.3-0.1-0.4-0.2c-1.9-2.5-2.8-3.5-3.9-3.5c-1.6,0.1-3.4-0.6-3.6-2.2c-0.1-0.3,0.1-0.5,0.4-0.6s0.5,0.1,0.6,0.4c0,0,0,0,0,0.1c0.1,1,1.4,1.4,2.5,1.3c1.7-0.1,2.9,1.3,4.8,3.9c0.2,0.2,0.1,0.5-0.1,0.7C18,17.5,17.9,17.6,17.8,17.6L17.8,17.6z" />
+            <path
+              d="M14.9,14.3c-0.3,0-0.5-0.2-0.5-0.4c-0.2-1.3,0.1-2.6,1-3.6c0.5-0.7,0.4-1.7-0.2-2.4c-0.2-0.2-0.1-0.5,0.1-0.7c0.2-0.2,0.5-0.1,0.7,0.1c0.9,1,0.9,2.5,0.1,3.6c-0.7,0.8-1,1.8-0.8,2.8C15.4,14,15.2,14.3,14.9,14.3C14.9,14.3,14.9,14.3,14.9,14.3C14.9,14.3,14.9,14.3,14.9,14.3z" />
+            <path
+              d="M15.3,11.8c-0.3,0-0.5-0.2-0.5-0.4l0-0.1c0-0.2-0.1-0.4-0.1-0.5c-0.3,0-0.6,0.1-0.9,0.2c-0.8,0.3-1.7,0.1-2.4-0.5c-0.5-0.7-0.6-1.7-0.1-2.5c0.1-0.3,0.4-0.4,0.7-0.3s0.4,0.4,0.3,0.7C12,9,12,9.5,12.2,9.7c0.4,0.3,0.9,0.4,1.3,0.2c0.9-0.3,1.4-0.3,1.8-0.1s0.4,0.7,0.5,1.2l0,0.1C15.8,11.5,15.6,11.7,15.3,11.8C15.3,11.8,15.3,11.8,15.3,11.8z" />
+            <path
+              d="M32.1,25.4c-0.2,0-0.4-0.1-0.5-0.3c-0.4-0.9-1.8-0.9-2.8-0.5c-1.6,0.7-3.2-0.3-5.8-2.2c-0.2-0.2-0.3-0.5-0.1-0.7c0.2-0.2,0.5-0.3,0.7-0.1c2.5,1.8,3.7,2.5,4.8,2.1c1.5-0.6,3.4-0.5,4.1,0.9c0.1,0.2,0,0.5-0.2,0.7C32.2,25.4,32.1,25.4,32.1,25.4L32.1,25.4z" />
+            <path
+              d="M28.3,30.9c-0.1,0-0.2,0-0.3-0.1c-1.1-0.7-1.6-2.1-1.2-3.4c0.4-0.9,0.4-2-0.1-2.9c-0.1-0.3,0-0.6,0.2-0.7c0.3-0.1,0.6,0,0.7,0.2c0.6,1.1,0.7,2.5,0.2,3.7c-0.2,0.8,0.1,1.8,0.9,2.2c0.2,0.2,0.3,0.5,0.1,0.7C28.6,30.8,28.5,30.9,28.3,30.9L28.3,30.9z" />
+            <path
+              d="M31.8,29.2L31.8,29.2c-0.3,0-0.5-0.3-0.5-0.5c0,0,0,0,0,0c0.1-0.7-0.1-1.1-0.4-1.3c-0.5-0.2-1-0.1-1.3,0.3c-0.7,0.5-1.2,0.7-1.6,0.6s-0.6-0.5-0.9-1L27,27.1c-0.1-0.2-0.1-0.5,0.2-0.7c0.2-0.1,0.5-0.1,0.7,0.2c0,0,0,0,0,0.1l0.1,0.1c0.1,0.2,0.2,0.3,0.3,0.5c0.3-0.1,0.5-0.3,0.8-0.5c0.7-0.6,1.6-0.7,2.4-0.3c0.7,0.5,1.1,1.4,0.9,2.3C32.3,29,32,29.2,31.8,29.2z" />
+            <path
+              d="M24.1,18.3c-0.3,0-0.5-0.2-0.5-0.5c0-0.2,0.1-0.4,0.3-0.5c2.9-1,4.2-1.6,4.5-2.7c0.4-1.6,1.6-3.1,3.2-2.8c0.3,0,0.5,0.3,0.4,0.6c0,0.3-0.3,0.5-0.6,0.4c0,0,0,0,0,0c-0.9-0.2-1.7,0.9-2,2c-0.4,1.7-2.1,2.4-5.1,3.4C24.2,18.3,24.1,18.3,24.1,18.3z" />
+            <path
+              d="M32.7,19.2c-0.9,0-1.8-0.4-2.3-1.2c-0.5-0.9-1.4-1.5-2.5-1.6c-0.3-0.1-0.5-0.3-0.4-0.6c0.1-0.3,0.3-0.5,0.6-0.4l0,0c1.3,0.2,2.4,0.9,3.1,2c0.5,0.7,1.5,0.9,2.3,0.6c0.3-0.1,0.6,0.1,0.6,0.3S34.2,19,33.9,19l0,0C33.5,19.2,33.1,19.2,32.7,19.2z" />
+            <path
+              d="M31.1,17.8c-0.2,0-0.5,0-0.7-0.1l-0.1,0c-0.3,0-0.5-0.3-0.4-0.6c0-0.3,0.3-0.5,0.6-0.4l0,0l0.1,0c0.2,0,0.4,0.1,0.5,0.1c0.1-0.3,0.1-0.6,0.1-0.9c-0.1-0.9,0.4-1.7,1.2-2.1c0.8-0.3,1.8-0.1,2.4,0.6c0.2,0.2,0.2,0.5,0.1,0.7s-0.5,0.2-0.7,0.1l0,0c-0.5-0.4-1-0.6-1.3-0.5c-0.4,0.3-0.6,0.7-0.6,1.2c0,0.9-0.1,1.4-0.4,1.7C31.6,17.7,31.3,17.8,31.1,17.8L31.1,17.8z" />
+            <path
+              d="M16.3,19.4L16.3,19.4c-3.2-0.3-5.1-0.6-5.8-2.1c-0.5-1-1.5-1.9-2.4-1.5c-0.3,0.1-0.6,0-0.7-0.2c-0.1-0.3,0-0.6,0.2-0.7c0,0,0,0,0,0c1.5-0.6,3,0.5,3.7,2c0.5,1,1.9,1.3,5,1.6c0.3,0,0.5,0.3,0.5,0.5C16.8,19.2,16.6,19.4,16.3,19.4L16.3,19.4z" />
+            <path
+              d="M7.4,22.4c-0.1,0-0.2,0-0.4,0c-0.3,0-0.5-0.3-0.5-0.5c0,0,0,0,0,0c0-0.3,0.3-0.5,0.5-0.5c0,0,0,0,0,0c0.9,0.1,1.7-0.3,2.1-1.1c0.4-1.2,1.3-2.2,2.6-2.7c0.3-0.1,0.6,0,0.7,0.3c0.1,0.3,0,0.6-0.3,0.7c-1,0.3-1.7,1.1-2,2.1C9.8,21.8,8.7,22.5,7.4,22.4z" />
+            <path
+              d="M9.2,20.6c-0.1,0-0.3,0-0.4-0.1C8.4,20.3,8.2,19.7,8,19c-0.2-0.6-0.5-1-0.8-1.1c-0.4-0.1-0.8,0.2-1.1,0.7c-0.2,0.2-0.5,0.3-0.7,0.1c-0.2-0.2-0.3-0.5-0.1-0.7c0.9-1.2,1.7-1.2,2.2-1.2c0.8,0.2,1.5,0.9,1.6,1.8C9,19,9.1,19.3,9.3,19.6c0.2-0.1,0.3-0.1,0.5-0.2l0.1,0c0.3-0.1,0.6,0,0.7,0.3c0.1,0.2,0,0.5-0.3,0.6l-0.1,0C9.9,20.4,9.6,20.5,9.2,20.6z" />
+            <path d="M8.6,26c-0.1,0-0.1,0-0.2,0c-0.3-0.1-0.4-0.4-0.3-0.7c0,0,0,0,0,0c0.6-1.5,2.5-1.7,4-1.2c1.1,0.4,2.3-0.4,4.7-2.3c0.2-0.2,0.5-0.1,0.7,0.1c0.2,0.2,0.1,0.5-0.1,0.7c-2.5,2-4,3-5.7,2.5c-1.1-0.4-2.4-0.3-2.8,0.6C8.9,25.9,8.8,26,8.6,26z" />
+            <path d="M12.6,31.2c-0.3,0-0.5-0.2-0.5-0.5c0-0.2,0.1-0.3,0.2-0.4c0.7-0.5,1-1.4,0.8-2.3c-0.6-1.2-0.6-2.5,0-3.7c0.1-0.3,0.4-0.4,0.7-0.3s0.4,0.4,0.3,0.7c-0.5,0.9-0.5,2,0,2.9c0.5,1.3,0,2.7-1.1,3.4C12.8,31.2,12.7,31.2,12.6,31.2z" />
+            <path
+              d="M9,29.7c-0.3,0-0.5-0.2-0.5-0.4c-0.2-0.9,0.1-1.8,0.8-2.3c0.8-0.4,1.7-0.3,2.4,0.2c0.3,0.2,0.5,0.3,0.8,0.4c0.1-0.2,0.2-0.3,0.2-0.5l0-0.1c0.1-0.3,0.4-0.4,0.7-0.3c0.3,0.1,0.4,0.4,0.3,0.7l0,0.1c-0.2,0.6-0.4,1-0.8,1.1c-0.5,0.2-1-0.1-1.7-0.5c-0.4-0.3-0.9-0.4-1.3-0.2c-0.3,0.2-0.4,0.7-0.3,1.3C9.6,29.4,9.4,29.7,9,29.7C9.1,29.7,9.1,29.7,9,29.7C9.1,29.7,9,29.7,9,29.7z" />
+            <path
+              d="M16.4,32.6c-0.2,0-0.4-0.1-0.5-0.3c-0.6-1.5,0.6-3,2.1-3.7c1-0.5,1.3-1.9,1.8-4.9c0-0.3,0.3-0.5,0.6-0.4s0.5,0.3,0.4,0.6l0,0c-0.4,3.2-0.8,5-2.3,5.7c-1,0.5-1.9,1.5-1.6,2.4c0.1,0.3,0,0.6-0.3,0.7C16.5,32.6,16.4,32.6,16.4,32.6L16.4,32.6z" />
+            <path
+              d="M22.9,33.6C22.9,33.6,22.9,33.6,22.9,33.6c-0.3,0-0.5-0.3-0.5-0.6c0,0,0,0,0,0c0.2-0.9-0.2-1.7-1-2.1c-1.2-0.4-2.2-1.4-2.6-2.7c-0.1-0.3,0-0.6,0.3-0.7c0.3-0.1,0.6,0,0.7,0.3l0,0c0.3,1,1.1,1.8,2.1,2.1c1.2,0.6,1.9,1.9,1.6,3.2C23.4,33.4,23.2,33.6,22.9,33.6z" />
+            <path
+              d="M19.3,35c-0.1,0-0.2,0-0.3-0.1c-0.8-0.4-1.2-1.3-1.1-2.2c0.3-0.8,1-1.5,1.8-1.6c0.3-0.1,0.6-0.1,0.9-0.3c-0.1-0.2-0.1-0.3-0.2-0.5l0-0.1c-0.1-0.3,0-0.6,0.3-0.7c0.3-0.1,0.6,0,0.7,0.3l0,0l0,0.1c0.2,0.6,0.4,1,0.2,1.4c-0.2,0.4-0.8,0.6-1.6,0.8c-0.6,0.1-1,0.4-1.1,0.8s0.2,0.8,0.7,1.2c0.2,0.2,0.3,0.5,0.1,0.7C19.7,34.9,19.5,35,19.3,35L19.3,35z" />
+            <path d="M20.2,21.4c-0.8,0-1.4-0.6-1.4-1.4s0.6-1.4,1.4-1.4s1.4,0.6,1.4,1.4C21.6,20.8,21,21.4,20.2,21.4z M20.2,19.5c-0.2,0-0.4,0.2-0.4,0.4c0,0.2,0.2,0.4,0.4,0.4c0.2,0,0.4-0.2,0.4-0.4C20.6,19.7,20.4,19.6,20.2,19.5z" />
+        </g>
+    </symbol>
+    <symbol id="issue_7" viewBox="0 0 40 40">
+        <path
+          d="M35,12.1c0-2.9-2.4-5.3-5.3-5.3c-3.4,0-6.2,2.8-6.2,6.2v2.1c-2.2,1.1-4.8,1.1-7.1,0v-2.1c0-3.4-2.8-6.2-6.2-6.2C7.4,6.8,5,9.1,5,12.1c0,1.7,1.2,3.1,2.8,3.4c0.4,1.4,1.9,2.2,3.3,1.7c1.4-0.4,2.2-1.9,1.7-3.3c-0.4-1.4-1.9-2.2-3.3-1.7c-0.7,0.2-1.3,0.8-1.6,1.5c-0.7-0.3-1.1-0.9-1.1-1.6c0-1.9,1.6-3.5,3.5-3.5c2.4,0,4.4,2,4.4,4.4v5.4c0,3.6,1.6,7,4.4,9.2v5.7h1.8v-5.7c2.8-2.2,4.5-5.6,4.4-9.2v-5.4c0-2.4,2-4.4,4.4-4.4c1.9,0,3.5,1.6,3.5,3.5c0,0.7-0.4,1.4-1.1,1.6c-0.6-1.3-2.1-2-3.5-1.4s-2,2.1-1.4,3.5c0.6,1.3,2.1,2,3.5,1.4c0.7-0.3,1.3-0.9,1.5-1.6C33.8,15.1,35,13.7,35,12.1z M10.3,13.8c0.5,0,0.9,0.4,0.9,0.9s-0.4,0.9-0.9,0.9c-0.5,0-0.9-0.4-0.9-0.9l0,0C9.4,14.2,9.8,13.8,10.3,13.8z M23.5,18.3c0,2.9-1.3,5.8-3.5,7.6c-2.3-1.9-3.6-4.7-3.5-7.6V17c2.3,0.9,4.8,0.9,7.1,0L23.5,18.3z M29.7,15.6c-0.5,0-0.9-0.4-0.9-0.9s0.4-0.9,0.9-0.9s0.9,0.4,0.9,0.9l0,0C30.6,15.2,30.2,15.6,29.7,15.6L29.7,15.6z" />
+    </symbol>
+    <symbol id="issue_8" viewBox="0 0 40 40">
+        <g>
+            <path
+              d="M15.2,15.9h-0.6c0.1-0.3,0.3-0.7,0.5-1c0.5-0.8,0.8-1.6,0.8-2.5c0-2.2-1.1-3.3-3.1-3.3C8.3,9.1,5,12.8,5,17.6c0,4.2,1.9,6.5,5.5,6.5c1.1,0.1,2.2-0.3,3.1-1.1c0.9-1,1.3-2.3,1.2-3.7c0-0.4-0.3-0.7-0.7-0.7s-0.7,0.3-0.7,0.7l0,0c0.1,1-0.2,2-0.8,2.7c-0.6,0.5-1.3,0.8-2.1,0.7c-2.7,0-4.1-1.6-4.1-5.1c0-4.1,2.8-7.2,6.5-7.2c0.9,0,1.7,0.2,1.7,1.9c-0.1,0.7-0.3,1.3-0.7,1.9c-0.5,0.7-0.7,1.5-0.8,2.3c0,0.4,0.2,0.7,0.6,0.7c0,0,0.1,0,0.1,0h1.4c1.5,0,2.7,1.2,2.7,2.7v10.2c0,0.4,0.3,0.7,0.7,0.7c0.4,0,0.7-0.3,0.7-0.7V20C19.3,17.7,17.5,15.9,15.2,15.9z" />
+            <path
+              d="M27.2,9.1c-2,0-3.1,1.2-3.1,3.3c0.1,0.9,0.3,1.8,0.8,2.5c0.2,0.3,0.3,0.7,0.5,1h-0.6c-2.3,0-4.1,1.8-4.1,4.1v10.2c0,0.4,0.3,0.7,0.7,0.7s0.7-0.3,0.7-0.7V20c0-1.5,1.2-2.7,2.7-2.7h1.4c0.4,0,0.7-0.2,0.7-0.6c0,0,0-0.1,0-0.1c-0.1-0.8-0.3-1.6-0.8-2.3c-0.4-0.6-0.6-1.2-0.7-1.9c0-1.7,0.8-1.9,1.7-1.9c3.7,0,6.5,3.1,6.5,7.2c0,3.4-1.4,5.1-4.1,5.1c-0.8,0.1-1.5-0.2-2.1-0.7c-0.6-0.8-0.9-1.8-0.8-2.7c0-0.4-0.2-0.7-0.6-0.7c0,0-0.1,0-0.1,0c-0.4,0-0.7,0.3-0.7,0.7c-0.1,1.3,0.3,2.7,1.2,3.7c0.8,0.8,1.9,1.2,3.1,1.1c3.5,0,5.5-2.3,5.5-6.5C35,12.8,31.7,9.1,27.2,9.1L27.2,9.1z" />
+        </g>
+    </symbol>
+    <symbol id="issue_9" viewBox="0 0 40 40">
+        <g>
+            <path
+              d="M32.9,20.8h-6c-0.4,0-0.7,0.3-0.7,0.7c0,0.2,0,0.5,0,0.7c-0.3,3.2-3.1,5.7-6.3,5.7c-0.2,0-0.5,0-0.7,0c-1.7-0.2-3.2-1-4.2-2.4c-0.8-1.1-1.3-2.5-1.4-3.9c0-0.4-0.3-0.7-0.7-0.7H7.1c-1.1,0-2.1,0.9-2.1,2.1v9.2c0,1.1,0.9,2.1,2.1,2.1h25.8c1.1,0,2.1-0.9,2.1-2.1v-9.2C35,21.7,34.1,20.8,32.9,20.8z M33.6,32.1c0,0.3-0.3,0.6-0.6,0.6H7.1c-0.3,0-0.6-0.3-0.6-0.6v-9.2c0-0.3,0.3-0.6,0.6-0.6h5.1c0.2,1.5,0.8,2.9,1.7,4c1.3,1.7,3.1,2.7,5.2,2.9c4.3,0.5,8.1-2.6,8.6-6.9c0,0,0,0,0,0l0-0.1h5.3c0.3,0,0.6,0.3,0.6,0.6L33.6,32.1L33.6,32.1z" />
+            <path
+              d="M19.3,26.3c0.2,0,0.4,0,0.5,0c2.5,0,4.6-1.9,4.9-4.4c0.1-1.7-0.2-3.3-0.7-4.9c-0.8-2.8-1.5-5.5,0.8-9.1c0.4-0.6,0.2-1.5-0.4-1.9c-0.5-0.3-1.1-0.3-1.6,0.1c-2.8,2.2-4.9,5-6.3,8.3c-0.9,2.1-1.4,4.3-1.5,6.5C15,23.8,16.8,26,19.3,26.3z M23.3,7.5c-2.4,4-1.5,7.1-0.7,9.9c0.5,1.4,0.7,2.9,0.7,4.4c-0.2,1.8-1.7,3.1-3.4,3.1c-0.1,0-0.3,0-0.4,0c-1.9-0.3-3.2-2-3.1-3.9C16.7,15.7,19.2,10.8,23.3,7.5L23.3,7.5z" />
+            <path d="M18.5,22.2L18.5,22.2c0.3-0.1,0.5-0.5,0.5-0.8c-0.2-1-0.2-2,0.1-3c0.1-0.4-0.1-0.8-0.5-0.9c-0.4-0.1-0.8,0.1-0.9,0.5l0,0c-0.3,1.2-0.4,2.5-0.1,3.7C17.6,22.1,18,22.3,18.5,22.2C18.4,22.2,18.4,22.2,18.5,22.2z" />
+            <circle cx="19.1" cy="23.2" r="0.7" />
+        </g>
+    </symbol>
+    <symbol id="issue_10" viewBox="0 0 40 40">
+        <g>
+            <path
+              d="M10.4,10.3H12c1.5,0,2.6-1.2,2.6-2.6S13.4,5,12,5S9.3,6.2,9.3,7.6c0,0,0,0,0,0v1.2c-2,0.8-3.3,2.8-3.3,4.9c0,4.4,4.5,9.8,8.6,10.6v2.8c0,4.4,3.5,7.9,7.9,7.9s7.9-3.5,7.9-7.9v-1c2.4-0.5,3.9-2.8,3.4-5.2s-2.8-3.9-5.2-3.4s-3.9,2.8-3.4,5.2c0.4,1.7,1.7,3.1,3.4,3.4v1c-0.1,3.4-2.9,6.1-6.3,6c-3.3-0.1-5.9-2.7-6-6v-2.8c3.8-0.7,7.8-5.4,8.4-9.4c0.6-2.5-0.7-5.1-3.2-6.1V7.6C21.6,6.2,20.5,5,19,5c-1.5,0-2.6,1.2-2.6,2.6s1.2,2.6,2.6,2.6h1.6c1.9,0.5,3,2.5,2.5,4.4c-0.7,3.9-4.9,8-7.6,8c-3.1,0-7.6-5.1-7.7-8.9C7.8,12.1,8.8,10.7,10.4,10.3z M11.1,7.6c0-0.5,0.4-0.9,0.9-0.9s0.9,0.4,0.9,0.9S12.5,8.5,12,8.5l0,0h-0.9V7.6z M26.9,21.8c0-1.5,1.2-2.6,2.6-2.6c1.5,0,2.6,1.2,2.6,2.6c0,1.5-1.2,2.6-2.6,2.6C28.1,24.4,26.9,23.2,26.9,21.8L26.9,21.8z M19.9,8.5H19c-0.5,0-0.9-0.4-0.9-0.9s0.4-0.9,0.9-0.9s0.9,0.4,0.9,0.9v0V8.5z" />
+            <path d="M28.7,20.9h1.8v1.8h-1.8V20.9z" />
+        </g>
+    </symbol>
 </svg>
