--- a/src/css/project/_tiles.sass
+++ b/src/css/project/_tiles.sass
@@ -12,6 +12,12 @@
     @media(min-width: 1350px)
       margin-bottom: 84px
 
+  &--type_1
+    @media(min-width: 1024px)
+      max-width: 1160px
+      margin-left: auto
+      margin-right: auto
+
   &__item
     display: flex
     flex-direction: column
@@ -36,6 +42,10 @@
 
       @media(min-width: 1024px)
         width: 33.33333%
+
+    &--type_3
+      @media(min-width: 768px)
+        width: 50%
 
 .tile-link
   background-color: #fff
