--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -63,10 +63,10 @@ h3,
 .h3
   font-size: 17px
   line-height: 1.2
-  font-weight: 800
+  font-weight: 700
   line-height: 1.2
   letter-spacing: -1px
-  margin-bottom: 24px
+  margin-bottom: 16px
 
   @media(min-width: 1350px)
     font-size: 24px
@@ -75,10 +75,10 @@ h4,
 .h4
   font-size: 15px
   line-height: 1.2
-  font-weight: 800
+  font-weight: 700
   line-height: 1.2
   letter-spacing: -0.5px
-  margin-bottom: 24px
+  margin-bottom: 16px
 
   @media(min-width: 1350px)
     font-size: 20px
@@ -87,10 +87,10 @@ h5,
 .h5
   font-size: 14px
   line-height: 1.2
-  font-weight: 800
+  font-weight: 700
   line-height: 1.2
   letter-spacing: -0.5px
-  margin-bottom: 24px
+  margin-bottom: 16px
 
   @media(min-width: 1350px)
     font-size: 18px
@@ -99,10 +99,10 @@ h6,
 .h6
   font-size: 14px
   line-height: 1.2
-  font-weight: 800
+  font-weight: 700
   line-height: 1.2
   letter-spacing: -0.5px
-  margin-bottom: 24px
+  margin-bottom: 16px
 
   @media(min-width: 1350px)
     font-size: 16px
@@ -226,3 +226,17 @@ ul
 
         .icon
           fill: $purple
+
+.iconed-title
+  align-items: center
+  display: flex
+
+  img
+    min-width: 40px
+    margin-right: 12px
+    width: 40px
+
+    @media(min-width: 1350px)
+      margin-right: 24px
+      min-width: 66px
+      width: 66px
