--- a/src/css/project/_doctors.sass
+++ b/src/css/project/_doctors.sass
@@ -118,3 +118,57 @@
     font-size: 18px
     font-weight: 800
     margin-top: auto
+
+.doctor-inline
+  display: flex
+  flex-direction: column
+  height: 100%
+  margin-left: auto
+  margin-right: auto
+  max-width: 392px
+  position: relative
+  width: 100%
+
+  @media(min-width: 768px)
+    align-items: center
+    flex-direction: row
+    max-width: 100%
+
+  &:not(:last-child)
+    margin-bottom: 56px
+
+  &__image
+    background-color: $purple_light
+    border: 1px solid $purple_light
+    border-radius: $border-radius
+    margin-bottom: 20px
+    max-width: 386px
+    padding: 16px
+
+    @media(min-width: 768px)
+      margin-bottom: 0
+      min-width: 386px
+      width: 386px
+
+    img
+      border-radius: $border-radius
+
+  &__info
+    @media(min-width: 768px)
+      padding-left: 24px
+
+  &__name
+    font-size: 18px
+    font-weight: 800
+    line-height: 1.2
+    margin-bottom: 24px
+
+    @media(min-width: 1024px)
+      font-size: 20px
+
+    @media(min-width: 1350px)
+      font-size: 24px
+
+  &__place
+    font-weight: 700
+    margin-bottom: 16px
