--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -92,3 +92,13 @@
 @import "project/_clinics-slider.sass"
 
 @import "project/_equip-slider.sass"
+
+@import "project/_alphabeth.sass"
+
+@import "project/_issues-list.sass"
+
+@import "project/_intro.sass"
+
+@import "project/_record-form.sass"
+
+@import "project/_banner.sass"
