--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -21,7 +21,6 @@ body
 
 .page-content
   flex: 1 0 auto
-  //overflow: hidden
   padding-top: 90px
   padding-bottom: 40px
   position: relative
@@ -49,3 +48,45 @@ body
 
 .page-section
   margin-bottom: 60px
+
+.text-block
+  margin-left: auto
+  margin-right: auto
+  max-width: 1000px
+
+  &:not(:last-child)
+    margin-bottom: 56px
+
+    @media(min-width: 1350px)
+      margin-bottom: 96px
+
+.columns
+  @media(min-width: 768px)
+    display: flex
+    flex-wrap: wrap
+    margin-left: -12px
+    margin-right: -12px
+
+  @media(min-width: 1350px)
+    margin-left: -20px
+    margin-right: -20px
+
+  &--3
+    .columns__column
+      @media(min-width: 1024px)
+        width: 33.33333%
+
+  &:not(:last-child)
+    margin-bottom: 32px
+
+  &__column
+    margin-bottom: 24px
+
+    @media(min-width: 768px)
+      padding-left: 12px
+      padding-right: 12px
+      width: 50%
+
+    @media(min-width: 1350px)
+      padding-left: 20px
+      padding-right: 20px
