--- a/src/css/project/_prices-list.sass
+++ b/src/css/project/_prices-list.sass
@@ -225,6 +225,17 @@
         top: 0
         z-index: 1
 
+  &__complex,
+  &__time
+    font-size: 16px
+    font-weight: 700
+    margin-right: 32px
+    margin-bottom: 0
+    white-space: nowrap
+
+    @media(min-width: 1350px)
+      font-size: 18px
+
   &__price
     min-width: 130px
     margin-right: auto
@@ -240,3 +251,21 @@
 
     @media(min-width: 1024px)
       margin-left: 32px
+
+.prices
+  &:not(:last-child)
+    margin-bottom: 56px
+
+    @media(min-width: 1350px)
+      margin-bottom: 96px
+
+  &__list
+    background-color: #fff
+    border-radius: $border-radius
+    border: 2px solid $green
+    max-width: 1200px
+    margin-left: auto
+    margin-right: auto
+
+    &:not(:last-child)
+      margin-bottom: 32px
