--- a/src/css/project/_alphabeth.sass
+++ b/src/css/project/_alphabeth.sass
@@ -30,6 +30,11 @@
     width: 6px
 
   &__item
+    &--all
+      margin-right: 24px
+
+      .alphabeth__button
+        width: 56px
 
   &__button
     background-color: transparent
