--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -54,6 +54,8 @@
 
 @import "project/_switch.sass"
 
+@import "project/_card-label.sass"
+
 @import "project/_search-bar.sass"
 
 @import "project/_map-block.sass"
@@ -102,3 +104,5 @@
 @import "project/_record-form.sass"
 
 @import "project/_banner.sass"
+
+@import "project/_consult.sass"
