--- a/src/css/base/_group-buttons.sass
+++ b/src/css/base/_group-buttons.sass
@@ -53,8 +53,10 @@
     cursor: pointer
     display: flex
     height: 48px
+    justify-content: center
     line-height: 1.25
     padding: 8px
+    text-align: center
     transition: background-color 0.3s, color 0.3s
 
     @media(min-width: 768px)
