--- a/src/css/project/_consult.sass
+++ b/src/css/project/_consult.sass
@@ -1,35 +1,59 @@
 .consult
-  &__steps
-    display: flex
-    justify-content: center
+  &__steps-block
     margin-bottom: 48px
+    overflow-x: auto
+    text-align: center
+
+  &__steps
+    display: inline-flex
+    justify-content: center
 
   &__steps-item
     align-items: center
-    border-radius: 50%
-    color: $green
+    border-bottom: 4px solid $green_light
     display: flex
     font-weight: 700
-    height: 40px
     justify-content: center
-    margin-left: 8px
-    margin-right: 8px
-    text-decoration: none
+    padding-left: 8px
+    padding-right: 8px
+    padding-bottom: 4px
+    white-space: nowrap
     transition: background-color 0.3s
-    width: 40px
 
-    @media(min-width: 768px)
-      height: 48px
-      width: 48px
+    @media(min-width: 1900px)
+      font-size: 18px
+      padding-left: 12px
+      padding-right: 12px
+
+    span
+      align-items: center
+      border-radius: 50%
+      background-color: $green_light
+      color: $green
+      display: flex
+      font-size: 16px
+      height: 24px
+      justify-content: center
+      min-width: 24px
+      margin-right: 8px
+      width: 24px
+
+      &.is-active
+        background-image: url("data:image/svg+xml,%3Csvg width='11' height='12' viewBox='0 0 11 12' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.35014 6.01015L4.38887 10.7293L9.05368 1.84951' stroke='%2300B0C8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A")
+        background-position: 50% 50%
+        background-repeat: no-repeat
+
+    &.current
+      border-bottom-color: $green
 
     &.is-active
-      background-color: $green_light
+      color: rgba($text-color, 0.5)
 
     &:first-child
-      margin-left: 0
+      padding-left: 0
 
     &:last-child
-      margin-right: 0
+      padding-right: 0
 
   &__step
     &:not(:last-child)
@@ -127,10 +151,9 @@
     margin-bottom: 32px
 
   &__result-block
-    margin-bottom: 56px
-
     @media(min-width: 1024px)
       display: flex
+      flex-wrap: wrap
       margin-left: -12px
       margin-right: -12px
 
@@ -139,6 +162,7 @@
 
     @media(min-width: 1024px)
       margin-bottom: 0
+      padding-bottom: 72px
       padding-left: 12px
       padding-right: 12px
       width: 66.66666%
@@ -159,10 +183,117 @@
       margin-bottom: 24px
 
   &__result
+    margin-bottom: 24px
+
     @media(min-width: 1024px)
+      margin-bottom: 0
       padding-left: 12px
       padding-right: 12px
       width: 33.33333%
+
+  &__result-button-block
+    width: 100%
+
+    @media(min-width: 1024px)
+      margin-top: -48px
+      padding-left: 12px
+      padding-right: 12px
+
+  &__week,
+  &__doctors
+    margin-bottom: 36px
+
+.week
+  background-color: $green_light
+  padding: 8px 44px
+  position: relative
+
+  @media(max-width: 1023px)
+    margin-left: -20px
+    margin-right: -20px
+
+  @media(min-width: 1024px)
+    border-radius: $border-radius
+
+  @media(min-width: 1900px)
+    padding-left: 70px
+    padding-right: 70px
+
+  &__list
+    display: flex
+    margin-left: -8px
+    margin-right: -8px
+    overflow-x: auto
+
+  &__list-item
+    min-width: 98px
+    padding: 8px 4px
+    width: calc(100% / 7)
+
+  &__button
+    align-items: center
+    border: none
+    border-radius: 50%
+    background-color: #fff
+    cursor: pointer
+    display: flex
+    height: 32px
+    justify-content: center
+    padding: 0
+    position: absolute
+    top: 50%
+    transform: translateY(-50%)
+    width: 32px
+
+    &:first-child
+      left: 2px
+
+      @media(min-width: 1900px)
+        left: 16px
+
+    &:last-child
+      left: auto
+      right: 2px
+
+      @media(min-width: 1900px)
+        right: 16px
+
+    .icon
+      fill: $text-color
+      height: 24px
+      width: 24px
+
+  &__day
+    background-color: #fff
+    border: none
+    border-radius: $border-radius
+    cursor: pointer
+    display: block
+    font-size: 12px
+    padding: 12px 8px
+    white-space: nowrap
+    width: 100%
+
+    @media(min-width: 1350px)
+      font-size: 14px
+
+    @media(min-width: 1900px)
+      font-size: 16px
+
+    &.is-active
+      box-shadow: 0 4px 6px 0 rgba(#000, 0.2)
+
+  &__day-title
+    display: block
+    font-weight: 700
+    margin-bottom: 4px
+
+  &__day-options
+    display: block
+    font-size: 11px
+
+    @media(min-width: 1900px)
+      font-size: 14px
 
 .consult-result
   background-color: $green_light
