--- a/src/css/project/_map-block.sass
+++ b/src/css/project/_map-block.sass
@@ -26,6 +26,17 @@
       border-color: $green
       background-color: rgba($green_light, 0.5)
 
+      &.is-active
+        background-color: $green
+        color: #fff
+
+        a
+          color: #fff
+
+        .button
+          background-color: #fff
+          color: $green
+
     .map-item__info
       .button
         &.is-active
