--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -227,6 +227,12 @@ ul
         .icon
           fill: $purple
 
+  .more-link
+    margin-right: 12px
+
+    @media(min-width: 768px)
+      margin-right: 32px
+
 .iconed-title
   align-items: center
   display: flex
