--- a/src/css/project/_filter.sass
+++ b/src/css/project/_filter.sass
@@ -11,24 +11,24 @@
 
   &__item
     margin-bottom: 10px
-    margin-right: 20px
+    margin-right: 16px
 
-    @media(min-width: 1500px)
+    @media(min-width: 1900px)
       margin-right: 40px
-
 
   &__buttons
     display: flex
     margin-right: 0
 
-    @media(min-width: 1350px)
-      margin-left: auto
-
     @media(min-width: 1500px)
       margin-right: 0
+
+    @media(min-width: 1900px)
+      margin-right: 0
+      margin-left: auto
 
     .button
       min-width: 130px
 
       &:not(:last-child)
-        margin-right: 20px
+        margin-right: 16px
