--- a/src/css/project/_more-block.sass
+++ b/src/css/project/_more-block.sass
@@ -5,25 +5,25 @@
     margin-bottom: 46px
 
     @media(min-width: 1350px)
-      margin-bottom: 86px
+      margin-bottom: 86px    
 
-  &__link
-    align-items: center
-    color: $text-color
-    display: inline-flex
-    font-weight: 700
-    padding-top: 10px
-    padding-bottom: 10px
+.more-link
+  align-items: center
+  color: $text-color
+  display: inline-flex
+  font-weight: 700
+  padding-top: 10px
+  padding-bottom: 10px
 
-    &:hover,
-    &:focus
-      .icon
-        fill: rgba($green, 0.6)
-
+  &:hover,
+  &:focus
     .icon
-      fill: $text-color
-      height: 16px
-      margin-top: 3px
-      margin-left: 8px
-      transition: fill 0.3s
-      width: 16px
+      fill: rgba($green, 0.6)
+
+  .icon
+    fill: $text-color
+    height: 16px
+    margin-top: 3px
+    margin-left: 8px
+    transition: fill 0.3s
+    width: 16px
