--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -26,7 +26,7 @@
 
 @import "vendor/slick.scss"
 
-//@import "vendor/jquery.fancybox.scss"
+@import "vendor/jquery.fancybox.scss"
 
 @import "vendor/scrooler.scss"
 
@@ -63,6 +63,8 @@
 @import "project/_more-block.sass"
 
 @import "project/_footer.sass"
+
+@import "project/_alt-footer.sass"
 
 @import "project/_float-bar.sass"
 
@@ -106,3 +108,5 @@
 @import "project/_banner.sass"
 
 @import "project/_consult.sass"
+
+@import "project/_reviews-slider.sass"
