--- a/src/css/project/_header.sass
+++ b/src/css/project/_header.sass
@@ -21,7 +21,7 @@
     padding-top: 15px
     padding-bottom: 15px
 
-    .header__contacts
+    & > .header__contacts
       align-items: center
       display: none
       margin-left: auto
@@ -47,6 +47,43 @@
 
       @media(min-width: 1500px)
         margin-right: 40px
+
+    &--lab
+      @media (min-width: 1350px)
+        padding-top: 20px
+        padding-bottom: 20px
+
+      .header__logo
+        @media (min-width: 1600px)
+          margin-right: 72px
+
+      .header__bottom
+        @media(min-width: 1024px)
+          padding: 0
+
+        .container
+          @media(min-width: 1024px)
+            padding-left: 0
+            padding-right: 0
+
+          @media(min-width: 1350px)
+            width: 100%
+
+      & > .header__contacts
+        margin-right: 0
+
+        @media(min-width: 1500px)
+          margin-right: 0
+
+        .header__phone a
+          font-size: 16px
+
+      .header__burger
+        margin-left: auto
+
+      .main-menu
+        @media (min-width: 1024px) and (max-width: 1599px)
+          font-size: 14px
 
   &__logo
     margin-right: 12px
