--- a/src/template/scripts.html
+++ b/src/template/scripts.html
@@ -1,5 +1,8 @@
 <script src="js/jquery-3.6.0.min.js"></script>
 
+<script src="js/jquery.fancybox.min.js"></script>
+<script src="js/fancybox-defaults.js"></script>
+
 <script src="js/jquery.inputmask.min.js"></script>
 <script src="js/inputmask-init.js"></script>
 
