--- a/src/css/project/_tiles.sass
+++ b/src/css/project/_tiles.sass
@@ -79,6 +79,14 @@
     &:focus
       background-color: $purple_light
 
+  &--color_4
+    border: 1px solid $green_light
+    transition: background-color 0.3s, box-shadow 0.3s
+
+    &:hover,
+    &:focus
+      background-color: $green_light
+
   &--type_1
     padding: 24px
 
