--- a/src/template/sprite.html
+++ b/src/template/sprite.html
@@ -179,4 +179,7 @@
     <symbol id="star" viewBox="0 0 32 32">
         <path d="M16.3333 23.36L24.5733 28.3333L22.3867 18.96L29.6667 12.6533L20.08 11.84L16.3333 3L12.5867 11.84L3 12.6533L10.28 18.96L8.09333 28.3333L16.3333 23.36Z" />
     </symbol>
+    <symbol id="download" viewBox="0 0 32 32">
+        <path d="M25.3337 12H20.0003V4H12.0003V12H6.66699L16.0003 21.3333L25.3337 12ZM6.66699 24V26.6667H25.3337V24H6.66699Z" />
+    </symbol>
 </svg>
