--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -110,3 +110,11 @@
 @import "project/_consult.sass"
 
 @import "project/_reviews-slider.sass"
+
+@import "project/_incut-block.sass"
+
+@import "project/_infographic.sass"
+
+@import "project/_two-lists.sass"
+
+@import "project/_certificate.sass"
