--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -118,3 +118,9 @@
 @import "project/_two-lists.sass"
 
 @import "project/_certificate.sass"
+
+@import "project/_contacts.sass"
+
+@import "project/_doctor-detail.sass"
+
+@import "project/_recall-popup.sass"
