--- a/src/template/header_lab.html
+++ b/src/template/header_lab.html
@@ -39,7 +39,7 @@
                         <span>Контактный центр</span>
                     </div>
                     <button class="button button--height_2 button--type_1" type="button">
-                        <span>Записаться онлайн</span>
+                        <span>Заказать звонок</span>
                     </button>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                 <a href="tel:+78126004712">600-47-12, доб. 3039</a>
                 <span>Контактный центр</span>
             </div>
-            <button class="button button--height_2 button--type_1" type="button">
+            <button class="button button--height_2 button--type_1" type="button" data-fancybox="recall" data-src="#recall_popup">
                 <span>Записаться онлайн</span>
             </button>
         </div>
