--- a/src/css/project/_header.sass
+++ b/src/css/project/_header.sass
@@ -285,10 +285,13 @@
 
   &__users-type
     margin-bottom: 24px
-    width: 160px
+    width: 130px
 
     @media(min-width: 1024px)
       margin-bottom: 0
+
+    @media(min-width: 1400px)
+      width: 160px
 
   &__search
     margin-bottom: 40px
