--- a/src/css/project/_intro.sass
+++ b/src/css/project/_intro.sass
@@ -92,3 +92,19 @@
 
     @media(min-width: 1024px)
       margin-bottom: 20px
+
+  &--big
+    .consultation__title
+      font-weight: 800
+
+    .button
+      min-width: 130px
+
+    .consultation__label
+      min-width: 130px
+
+    &:not(:last-child)
+      margin-bottom: 56px
+
+      @media(min-width: 1350px)
+        margin-bottom: 96px
