--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -126,3 +126,11 @@
 @import "project/_recall-popup.sass"
 
 @import "project/_personal.sass"
+
+@import "project/_offers.sass"
+
+@import "project/_results-slider.sass"
+
+@import "project/_my-doctors.sass"
+
+@import "project/_results-table.sass"
