--- a/src/css/base/_inputs_and_textareas.sass
+++ b/src/css/base/_inputs_and_textareas.sass
@@ -58,6 +58,11 @@
   height: 48px
   padding: 16px
 
+  @media(min-width: 1900px)
+    height: 64px
+    padding-left: 24px
+    padding-right: 24px
+
 .textarea
   height: 160px
   padding: 16px
