--- a/src/css/project/_clinics-slider.sass
+++ b/src/css/project/_clinics-slider.sass
@@ -1,5 +1,4 @@
 .clinics-slider
-
   @media(min-width: 768px)
     display: flex
     flex-wrap: wrap
@@ -17,16 +16,15 @@
       margin-bottom: 96px
 
   &.slick-initialized
+    display: block
+
     .clinics-slider__item
       margin-bottom: 12px
 
-  .slick-list
-    width: 100%
-
   .slick-track
     display: flex
-    margin-left: 0
-    margin-right: 0
+    margin: 0
+    width: 100%
 
   &__item
     height: auto
