--- a/src/css/project/_equip-slider.sass
+++ b/src/css/project/_equip-slider.sass
@@ -24,8 +24,17 @@
       margin-bottom: 96px
 
   &.slick-initialized
-    .doctors-list__item
-      margin-bottom: 0
+    display: block
+
+    @media(min-width: 580px)
+      margin-left: -12px
+      margin-right: -12px
+
+    .equip-slider__item
+      @media(min-width: 580px)
+        display: flex
+        padding-left: 12px
+        padding-right: 12px
 
   .slick-list
     width: 100%
@@ -68,7 +77,7 @@
   &:hover,
   &:focus
     color: $text-color
-    
+
     .equip__image
       background-color: $purple_light
       box-shadow: 0 4px 6px 0 rgba(#000, 0.2)
