--- a/src/css/project/_news.sass
+++ b/src/css/project/_news.sass
@@ -13,7 +13,26 @@
     margin-left: -12px
     margin-right: -12px
 
+  &.slick-initialized
+    display: block
+
+    @media(min-width: 580px)
+      margin-left: -12px
+      margin-right: -12px
+
+    .news-list__item
+      @media(min-width: 580px)
+        display: flex
+        padding-left: 12px
+        padding-right: 12px
+
+  .slick-track
+    display: flex
+    margin: 0
+    width: 100%
+
   &__item
+    height: auto
     margin-bottom: 24px
 
     @media(min-width: 768px)
@@ -28,11 +47,12 @@
 
 .news
   border: 1px solid $green_light
-  border-radius: $border-radius*2
+  border-radius: $border-radius
   background-color: #fff
   box-shadow: none
   display: flex
   flex-direction: column
+  height: 100%
   margin-left: auto
   margin-right: auto
   max-width: 564px
@@ -44,17 +64,11 @@
   &:hover,
   &:focus
     background-color: $green_light
-    box-shadow: 0 4px 13px 0 rgba(#000, 0.2)
-    img
-      transform: scale(1.02)
+    box-shadow: 0 4px 6px 0 rgba(#000, 0.2)
 
   &__image
-    border-radius: $border-radius*2
+    border-radius: $border-radius
     overflow: hidden
-
-    img
-      transition: transform 0.3s
-      transform: scale(1)
 
   &__info
     display: flex
