--- a/src/css/project/_personal.sass
+++ b/src/css/project/_personal.sass
@@ -74,8 +74,10 @@
       height: auto
       max-width: 100%
       overflow: visible
+      position: sticky
       padding-bottom: 0
       padding-top: 0
+      top: 40px
       transform: none
 
     &.is-open
@@ -113,9 +115,11 @@
       width: calc(100% - 320px)
 
     @media(min-width: 1350px)
-      padding-left: 56px
       padding-top: 56px
       width: calc(100% - 370px)
+
+    @media(min-width: 1900px)
+      padding-left: 48px
 
 .user-info
   margin-bottom: 24px
