--- a/src/css/project/_results-slider.sass
+++ b/src/css/project/_results-slider.sass
@@ -1,4 +1,4 @@
-.complexes-list
+.results-slider
   list-style: none
   margin: 0
   padding: 0
@@ -6,8 +6,8 @@
   @media(min-width: 768px)
     display: flex
     flex-wrap: wrap
-    margin-left: -6px
-    margin-right: -6px
+    margin-left: -12px
+    margin-right: -12px
 
   &:not(:last-child)
     margin-bottom: 44px
@@ -22,7 +22,7 @@
       margin-left: -12px
       margin-right: -12px
 
-    .complexes-list__item
+    .results-slider__item
       @media(min-width: 580px)
         display: flex
         padding-left: 12px
@@ -39,89 +39,46 @@
 
     @media(min-width: 768px)
       display: flex
-      padding-left: 6px
-      padding-right: 6px
+      padding-left: 12px
+      padding-right: 12px
       width: 50%
 
     @media(min-width: 1024px)
-      width: 25%
+      width: 33.33333%
 
-.complex
-  border: 1px solid $green_light
+.results-item
   border-radius: $border-radius
-  background-color: #fff
+  background-color: $green_light
   box-shadow: none
+  color: $text-color
   display: flex
   flex-direction: column
   height: 100%
   margin-left: auto
   margin-right: auto
-  max-width: 424px
-  padding: 20px
-  position: relative
+  max-width: 364px
+  padding: 24px 32px
+  text-decoration: none
   transition: background-color 0.3s, box-shadow 0.3s
   width: 100%
 
   &:hover,
   &:focus
-    background-color: $green_light
     box-shadow: 0 4px 6px 0 rgba(#000, 0.2)
+    color: $text-color
 
   &__title
+    display: block
     font-size: 18px
     font-weight: 800
     line-height: 1.2
-    margin-bottom: 20px
-
-    @media(min-width: 1350px)
-      font-size: 20px
-
-    @media(min-width: 1900px)
-      font-size: 24px
-
-  &__subtitle
-    font-size: 18px
-    font-weight: 700
-    line-height: 1.2
-    margin-bottom: 12px
-
-    @media(min-width: 1350px)
-      font-size: 20px
-
-    @media(min-width: 1900px)
-      font-size: 24px
-
-    a
-      color: $text-color
-      text-decoration: none
-
-      &::after
-        bottom: 0
-        content: ''
-        left: 0
-        position: absolute
-        right: 0
-        top: 0
-        z-index: 1
-
-  &__time
     margin-bottom: 16px
 
-  &__buy-block
-    align-items: center
-    display: flex
-    justify-content: space-between
-    margin-top: auto
-
-    .button
-      position: relative
-      z-index: 2
-
-  &__price
-    font-size: 18px
-    font-weight: 800
-    line-height: 1.2
-    margin-bottom: 0
-
     @media(min-width: 1350px)
+      font-size: 20px
+
+    @media(min-width: 1900px)
       font-size: 24px
+
+  &__date
+    display: block
