--- a/src/css/project/_accordions.sass
+++ b/src/css/project/_accordions.sass
@@ -88,3 +88,9 @@
 
     @media(min-width: 1350px)
       padding-left: 40px
+
+    p,
+    ul,
+    ol
+      &:not(:last-child)
+        margin-bottom: 12px
