--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -103,6 +103,8 @@
 
 @import "project/_intro.sass"
 
+@import "project/_consultation.sass"
+
 @import "project/_record-form.sass"
 
 @import "project/_banner.sass"
@@ -134,3 +136,9 @@
 @import "project/_my-doctors.sass"
 
 @import "project/_results-table.sass"
+
+@import "project/_cart.sass"
+
+@import "project/_opinion.sass"
+
+@import "project/_get-result.sass"
