--- a/src/template/header.html
+++ b/src/template/header.html
@@ -22,12 +22,12 @@
             <button class="button button--height_2 button--type_1" type="button">
                 <span>Записаться онлайн</span>
             </button>
-            <button class="button button--height_2 button--type_1" type="button">
+            <a class="button button--height_2 button--type_1" href="#">
                 <svg class="icon">
                     <use xlink:href="#analysis"></use>
                 </svg>
                 <span>Проверить анализ</span>
-            </button>
+            </a>
         </div>
         <div class="header__top-links">
             <a class="header__top-link" href="#">
