--- a/src/css/project/_contacts.sass
+++ b/src/css/project/_contacts.sass
@@ -1,7 +1,14 @@
 .contacts
+
   @media(min-width: 1024px)
     display: flex
     flex-direction: row-reverse
+
+  &:not(:last-child)
+    margin-bottom: 56px
+
+    @media(min-width: 1350px)
+      margin-bottom: 96px
 
   &__text-block
     margin-bottom: 24px
